fix overflow

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -66,7 +66,15 @@
 
 .right-layout-container {
   height: 90%;
-  overflow-y: hidden;
+  overflow: hidden;
+}
+
+.right-layout-container-child {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding-right: 17px;
+  box-sizing: content-box;
 }
 
 .right-layout-item {
