--- a/src/styles/pages/_profile.scss
+++ b/src/styles/pages/_profile.scss
@@ -5,6 +5,19 @@
 }
 
 .profile-container {
+  overflow: hidden;
+  height: 90%;
+}
+
+.profile-container-child {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+  box-sizing: content-box;
+}
+
+.profile-image-container {
   position: relative;
   height: 230px;
 }
@@ -31,4 +44,3 @@
   top: 170px;
   right: 20px;
 }
-
